# marc

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: marc_benchmark.cpp
cmake/: marcConfig.cmake.in
docs/: README.md  architecture.md  baseline-readiness.md  benchmarks.md  c-api.md  clean-room-record.md  cli.md  composition.md  design-decisions.md  format.md  fuzzing.md  interoperability.md  references.md  releasing.md  test-vector-generation.md
docs/implementation/: README.md  clean-room-record.md  design-decisions.md  references.md  test-vector-generation.md
examples/: CMakeLists.txt  c_roundtrip.c
fuzz/: adaptive_huffman_stream_fuzz.cpp  blocked_huffman_stream_fuzz.cpp  checksum_raw_stream_fuzz.cpp  dynamic_range_stream_fuzz.cpp  lz77_adaptive_huffman_stream_fuzz.cpp  lz77_blocked_huffman_stream_fuzz.cpp  lz77_dynamic_range_stream_fuzz.cpp  lz77_stream_fuzz.cpp  lz78_adaptive_huffman_stream_fuzz.cpp  lz78_blocked_huffman_stream_fuzz.cpp  lz78_stream_fuzz.cpp  lzd_adaptive_huffman_stream_fuzz.cpp  lzd_blocked_huffman_stream_fuzz.cpp  lzd_stream_fuzz.cpp  lzmw_adaptive_huffman_stream_fuzz.cpp  lzmw_blocked_huffman_stream_fuzz.cpp  lzmw_stream_fuzz.cpp  lzss_adaptive_huffman_stream_fuzz.cpp  lzss_blocked_huffman_stream_fuzz.cpp  lzss_stream_fuzz.cpp  lzw_adaptive_huffman_stream_fuzz.cpp  lzw_blocked_huffman_stream_fuzz.cpp  lzw_stream_fuzz.cpp  rans_stream_fuzz.cpp  tans_stream_fuzz.cpp
include/marc/: export.h  marc.h
src/: marc.cpp
src/core/: bit_io.cpp  bit_io.hpp  checked_math.hpp  crc32c.cpp  crc32c.hpp  endian.hpp  hash.hpp  hash_tap.cpp  hash_tap.hpp  header_accumulator.hpp  limits.cpp  limits.hpp  sha256.cpp  sha256.hpp  status.cpp  status.hpp
src/dictionary/: lz77_decoder.cpp  lz77_decoder.hpp  lz77_encoder.cpp  lz77_encoder.hpp  lz77_format.cpp  lz77_format.hpp  lz77_streaming_decoder.cpp  lz77_streaming_decoder.hpp  lz77_streaming_encoder.cpp  lz77_streaming_encoder.hpp  lz77_validator.cpp  lz77_validator.hpp  lz78_decoder.cpp  lz78_decoder.hpp  lz78_encoder.cpp  lz78_encoder.hpp  lz78_format.cpp  lz78_format.hpp  lz78_streaming_decoder.cpp  lz78_streaming_decoder.hpp  lz78_streaming_encoder.cpp  lz78_streaming_encoder.hpp  lz78_validator.cpp  lz78_validator.hpp  lzd_decoder.cpp  lzd_decoder.hpp  lzd_encoder.cpp  lzd_encoder.hpp  lzd_format.cpp  lzd_format.hpp  lzd_streaming_decoder.cpp  lzd_streaming_decoder.hpp  lzd_streaming_encoder.cpp  lzd_streaming_encoder.hpp  lzd_validator.cpp  lzd_validator.hpp  lzmw_decoder.cpp  lzmw_decoder.hpp  lzmw_encoder.cpp  lzmw_encoder.hpp  (+32 more)
src/entropy/: adaptive_huffman_decoder.cpp  adaptive_huffman_decoder.hpp  adaptive_huffman_encoder.cpp  adaptive_huffman_encoder.hpp  adaptive_huffman_format.cpp  adaptive_huffman_format.hpp  adaptive_huffman_tree.cpp  adaptive_huffman_tree.hpp  blocked_huffman_controller.cpp  blocked_huffman_controller.hpp  blocked_huffman_decoder.cpp  blocked_huffman_decoder.hpp  blocked_huffman_encoder.cpp  blocked_huffman_encoder.hpp  blocked_huffman_format.cpp  blocked_huffman_format.hpp  blocked_huffman_frame_decoder.cpp  blocked_huffman_frame_decoder.hpp  blocked_huffman_frame_encoder.cpp  blocked_huffman_frame_encoder.hpp  canonical_huffman.cpp  canonical_huffman.hpp  dynamic_range_decoder.cpp  dynamic_range_decoder.hpp  dynamic_range_encoder.cpp  dynamic_range_encoder.hpp  dynamic_range_format.cpp  dynamic_range_format.hpp  dynamic_range_model.cpp  dynamic_range_model.hpp  huffman_decode_table.cpp  huffman_decode_table.hpp  rans_controller.cpp  rans_controller.hpp  rans_decode_table.cpp  rans_decode_table.hpp  rans_decoder.cpp  rans_decoder.hpp  rans_encoder.cpp  rans_encoder.hpp  (+14 more)
src/frame/: adaptive_huffman_frame.cpp  adaptive_huffman_frame.hpp  adaptive_huffman_frame_streaming_decoder.cpp  adaptive_huffman_frame_streaming_decoder.hpp  adaptive_huffman_frame_streaming_encoder.cpp  adaptive_huffman_frame_streaming_encoder.hpp  adaptive_huffman_profile.cpp  adaptive_huffman_profile.hpp  adaptive_huffman_stream.cpp  adaptive_huffman_stream.hpp  blocked_huffman_frame.cpp  blocked_huffman_frame.hpp  blocked_huffman_frame_streaming_decoder.cpp  blocked_huffman_frame_streaming_decoder.hpp  blocked_huffman_frame_streaming_encoder.cpp  blocked_huffman_frame_streaming_encoder.hpp  blocked_huffman_incremental_decoder.cpp  blocked_huffman_incremental_decoder.hpp  blocked_huffman_incremental_encoder.cpp  blocked_huffman_incremental_encoder.hpp  blocked_huffman_profile.cpp  blocked_huffman_profile.hpp  blocked_huffman_stream.cpp  blocked_huffman_stream.hpp  (+214 more)
tests/: adaptive_c_api_tests.c  adaptive_huffman_completion_tests.cpp  adaptive_huffman_decoder_tests.cpp  adaptive_huffman_encoder_tests.cpp  adaptive_huffman_format_tests.cpp  adaptive_huffman_frame_streaming_decoder_tests.cpp  adaptive_huffman_frame_streaming_encoder_tests.cpp  adaptive_huffman_frame_tests.cpp  adaptive_huffman_profile_tests.cpp  adaptive_huffman_stream_tests.cpp  adaptive_huffman_tree_tests.cpp  bit_io_tests.cpp  blocked_huffman_completion_tests.cpp  blocked_huffman_controller_tests.cpp  blocked_huffman_decoder_tests.cpp  blocked_huffman_encoder_tests.cpp  blocked_huffman_format_tests.cpp  blocked_huffman_frame_decoder_tests.cpp  blocked_huffman_frame_encoder_tests.cpp  blocked_huffman_frame_streaming_decoder_tests.cpp  blocked_huffman_frame_streaming_encoder_tests.cpp  blocked_huffman_incremental_decoder_tests.cpp  blocked_huffman_incremental_encoder_tests.cpp  blocked_huffman_profile_tests.cpp  blocked_huffman_serialized_frame_tests.cpp  blocked_huffman_stream_tests.cpp  c_api_tests.c  canonical_huffman_tests.cpp  checked_math_tests.cpp  checksum_raw_c_api_tests.c  checksum_raw_completion_tests.cpp  checksum_raw_profile_tests.cpp  checksum_raw_stream_tests.cpp  checksum_raw_streaming_tests.cpp  cli_roundtrip.cmake  core_tests.cpp  crc32c_tests.cpp  create_interoperability_bundle.ps1  dynamic_range_c_api_tests.c  dynamic_range_completion_tests.cpp  (+226 more)
tools/: marc_cli.cpp
(+1 files in other folders)
